# github_url-https-github.com-YOUR_USERNAME-YOUR_REPO_NAME.git-

./: .env  .env.template  .gitignore  .loop_state.json  analyze_espn.py  analyze_espn2.py  api_server.py  app.py  auto_deploy.py  backtest_inplay.py  backtest_output.txt  bet_tracker.py  cli.py  crucible_log.txt  detailed_75_results.txt  detailed_sim_report.md  espn_test.json  extract_code.py  fix.py  inference.py  local_predict.py  main.py  model_card.json  model_registry.py  monitoring.py  option_c.md  patch.py  patch_app.py  patch_latest.py  pyproject.toml  refactor.py  requirements-local.txt  requirements.txt  retrain_loop.py  run.bat  run_crucible.py  run_detailed_crucible.py  scratch_extract_odds.py  server_err.txt  server_out.txt  (+32 more)
betting/: bet_tracker.py  information_ratio_kelly.py  kelly_criterion.py  portfolio_kelly.py  stat_arb.py  value_betting.py
data/: arbitrage_balance_sheet.md  cv_calibrator.py  download_odds.py  espn_scraper.py  feature_vectors.joblib  gnn_dataset_builder.py  highlights_xg_pipeline.py  homography_calibrator.py  injuries_cache.json  international_results.csv  lineup_scraper.py  live_auto_poller.py  live_data_hub.py  live_match_poller.py  live_updater.py  mock_worldcup_data.py  odds_loader.py  player_tracker.py  scraper.py  statsbomb_loader.py  statsbomb_scraper.py  vision_xg_extractor.py  wc2026_live.csv  websocket_client.py  worldcup_matches.csv  xg_fetcher.py
execution/: exchange_simulator.py  hawkes_process.py  linucb_bandit.py  rl_agent.py  train_rl.py
features/: arbitrage_scanner.py  glicko_ratings.py  institutional_signals.py  (+3 more)
(+191 files in other folders)
